=== gedit 2.13.92 ===

2006-02-26  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.13.92 released

2006-02-26  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/capture.py:
	* plugins/externaltools/tools/manager.py:
	* plugins/externaltools/tools/functions.py:
	
	Fix a few python exceptions.

2006-02-24  Steve Frécinaux  <steve@istique.net>

	* gedit/gedit-ui.xml:
	* gedit/gedit-ui.h:
	* gedit/gedit-commands.h:
	* gedit/gedit-commands-search.c:

	Add a new menu entry: Search -> Clear highlight

2006-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-ui.h: s/Panel/Pane as per ui review.
	* gedit/gedit-command-view.c: make naming consistent with the above.
	* gedit/gedit-window.c: ditto.

2006-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-view.c: use gtk_accelerator_get_default_mod_mask
	instead of hardcoding SHIFT | CONTROL.

2006-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-ui.h: change Replace accel to ctrl+H as mandated, by the
	HIG.

2006-02-22  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/tools.glade:
	* plugins/externaltools/tools/manager.py:

	Use a GtkSourceView and text wrapping for command text view.
	Also fix bug #331114 by removing all the size requests.

2006-02-22  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetsLibrary.py: fixed get_snippets()
	to return a copy of the snippets data instead of the data itself.

2006-02-19  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-plugin.c: fix thinko (returning NULL
	iconditionally is not a good idea). Fixes bug 331811.

2006-02-19  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-command-file.c:
	* gedit/gedit-command-view.c:
	* gedit/gedit-tab.[ch]:

	fix compiler warnings.

2006-02-19  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.[ch]:
	* gedit/gedit-document-loader.[ch]:
	* gedit/gedit-tab.[ch]: