@@ -1,3 +1,8 @@
+2006-02-28  Steve Frécinaux  <steve@istique.net>
+
+	* plugins/pythonconsole/pythonconsole.py: fix python console history 
+	(bug #332861)
+
 === gedit 2.13.92 ===
 
 2006-02-26  Paolo Borelli  <pborelli@katamail.com>
